--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pokemon</title>
-    <script defer src="script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pokédex</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1 id="Name">Name</h1>
-    <section>
-      <h3 id="Type">Type</h3>
-      <h3 id="Evos">Evos</h3>
-    </section>
-    <form>
-      <input type="text" name="" id="PokemonS" />
-      <input type="submit" name="" id="" />
-    </form>
-  </body>
+</head>
+<body>
+    <nav>
+        <a href= "index.html"></a>
+        <a href= "pokemonDex.html"></a>
+    </nav>
+    <main>
+        <section class="button">
+        <a href="pokeDex.html" class="button-filled">Pokédex</a>
+        </section>
+    </main>
+</body>
 </html>
