jobbat ännu mer med style -  background, header, footer, etc.

--- a/pokeDex.html
+++ b/pokeDex.html
@@ -9,14 +9,19 @@
     <link rel="stylesheet" href="pokeDex.css" />
   </head>
   <body>
+    <header>
     <form>
       <input type="text" name="" id="PokemonS" />
       <input type="submit" name="" id="" />
     </form>
+  </header>
     <section class="info">
     <h1 id="Name">Name</h1>
       <h3 id="Type">Type</h3>
       <h3 id="Evos">Evos</h3>
     </section>
+    <footer>
+      
+    </footer>
   </body>
 </html>
