--- a/pokeDex.html
+++ b/pokeDex.html
@@ -10,18 +10,26 @@
   </head>
   <body>
     <header>
-    <form>
-      <input type="text" name="" id="PokemonS" />
-      <input type="submit" name="" id="" />
-    </form>
-  </header>
-    <section class="info">
-    <h1 id="Name">Name</h1>
-      <h3 id="Type">Type</h3>
-      <h3 id="Evos">Evos</h3>
-    </section>
+      <section class="button">
+        <a href="index.html" class="button-filled">HOME</a>
+      </section>
+      <nav>
+        <a href="index.html"></a>
+      </nav>
+      <form>
+        <input type="text" name="" id="PokemonS" />
+        <input type="submit" name="" id="" />
+      </form>
+    </header>
+    <main>
+      <section class="info">
+        <h1 id="Name">Name</h1>
+        <h3 id="Type">Type</h3>
+        <h3 id="Evos">Evos</h3>
+      </section>
+    </main>
     <footer>
-      
+      <h1>I N F O</h1>
     </footer>
   </body>
 </html>
