--- a/pokeDex.html
+++ b/pokeDex.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokédex</title>
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="pokeDex.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <section class="button">
-        <a href="index.html" class="button-filled">HOME</a>
+      <section class="button1">
+        <a href="index.html" class="button-filled"><---</a>
       </section>
       <nav>
         <a href="index.html"></a>
@@ -22,11 +22,14 @@
       </form>
     </header>
     <main>
+      <div class="gridmain">
+      <img class="gridnet" src="https://www.seekpng.com/png/full/17-171246_grid-png-tumblr-1280-x-720-grid.png" alt="">
       <section class="info">
         <h1 id="Name">Name</h1>
         <h3 id="Type">Type</h3>
         <h3 id="Evos">Evos</h3>
       </section>
+      </div>
     </main>
     <footer>
       <h1>I N F O</h1>
