--- a/pokeDex.html
+++ b/pokeDex.html
@@ -11,24 +11,27 @@
   <body>
     <header>
       <section class="button1">
-        <a href="index.html" class="button-filled"><---</a>
+        <a href="index.html" class="button-filled">← H O M E</a>
       </section>
       <nav>
         <a href="index.html"></a>
       </nav>
       <form>
         <input type="text" name="" id="PokemonS" />
-        <input type="submit" name="" id="" />
+        <input type="submit" name="" id="" value="Search" />
       </form>
     </header>
     <main>
-      <div class="gridmain">
-      <img class="gridnet" src="https://www.seekpng.com/png/full/17-171246_grid-png-tumblr-1280-x-720-grid.png" alt="">
-      <section class="info">
-        <h1 id="Name">Name</h1>
-        <h3 id="Type">Type</h3>
-        <h3 id="Evos">Evos</h3>
-      </section>
+      <div class="middle">
+        <section class ="sprite">
+          <img width="400" src="https://cdn2.bulbagarden.net/upload/thumb/e/e2/133Eevee.png/1200px-133Eevee.png" alt="">
+        </section>
+        <section class="info">
+            <h1 id="Name">Name: </h1>
+            <h3 id="ID">ID:   </h3>
+            <h3 id="Type">Type: </h3>
+            <h3 id="Evos">Evos: </h3>
+        </section>
       </div>
     </main>
     <footer>
