--- a/index.html
+++ b/index.html
@@ -18,51 +18,16 @@
         <nav>
           <a href="pokemonDex.html"></a>
         </nav>
-        <section class="button0">
-          <a href="pokeDex.html" class="button-filled">Pokédex</a>
-        </section>
         <div class="middlemain">
           <section class="eevee">
             <img 
-              width="400"
-              src="https://cdn2.bulbagarden.net/upload/thumb/e/e2/133Eevee.png/1200px-133Eevee.png"
-              alt=""
+            width="400"
+            src="https://cdn2.bulbagarden.net/upload/thumb/e/e2/133Eevee.png/1200px-133Eevee.png"
+            alt=""
             />
           </section>
-          <section class="text">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam
-              laborum error impedit, dolore facilis exercitationem, molestias quae
-              rerum eligendi, amet excepturi? Quia necessitatibus obcaecati,
-              incidunt eveniet nulla molestias nobis enim! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Fuga laboriosam natus provident
-              doloribus, harum corporis repellat sint et ex animi soluta, tenetur
-              nesciunt illum ad nisi quos veritatis fugiat maiores! Lorem ipsum
-              dolor sit, amet consectetur adipisicing elit. Aut dicta, eum modi
-              voluptas nemo nesciunt minus veniam suscipit! Ipsum nesciunt tempore
-              hic praesentium blanditiis rem molestiae voluptatem reiciendis
-              voluptas dicta. Lorem ipsum, dolor sit amet consectetur adipisicing
-              elit. Nemo esse accusamus quam quas corrupti alias odit maiores
-              fugiat? Numquam suscipit dolores aliquid nostrum officiis possimus
-              error molestiae, dolor voluptatibus in. Lorem ipsum dolor sit amet
-              consectetur, adipisicing elit. Odit vero consectetur reprehenderit
-              voluptatibus modi placeat quae facere voluptas, voluptatem fuga
-              deserunt laudantium veritatis. Harum ipsam vel consequuntur numquam
-              sequi ad. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Obcaecati sit eum enim laboriosam rerum velit exercitationem est,
-              quasi modi cupiditate ea sunt dolores reprehenderit rem magnam
-              voluptas et fugiat maxime! Lorem ipsum dolor, sit amet consectetur
-              adipisicing elit. Dolor pariatur beatae error suscipit, voluptatibus
-              explicabo qui quae eligendi dicta, odit vero recusandae culpa porro
-              saepe ea quaerat unde iusto? Eaque! Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Accusamus mollitia quod non molestiae,
-              facilis, quisquam ipsa nostrum dolorem et quis placeat nemo, dolor
-              numquam iure culpa officia odit dolorum rerum. Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Id quod maxime quae quas
-              praesentium error vitae repellat ratione, voluptatem voluptates
-              similique blanditiis cum rem deleniti quam, magnam repellendus,
-              deserunt adipisci.
-            </p>
+          <section class="button0">
+            <a href="pokeDex.html" class="button-filled">Pokédex</a>
           </section>
           <section class="pikachu">
             <img
@@ -74,5 +39,8 @@
         </div>
       </div>
     </main>
+    <footer>
+      
+    </footer>
   </body>
 </html>
