--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       </div>
     </main>
     <footer>
+      <p>
+        Go to the Pokédex and start searching pokémon!
+      </p>
     </footer>
   </body>
 </html>
