--- a/pokeDex.html
+++ b/pokeDex.html
@@ -24,7 +24,7 @@
     <main>
       <div class="middle">
         <section class ="sprite">
-          <img width="400" src="https://cdn2.bulbagarden.net/upload/thumb/e/e2/133Eevee.png/1200px-133Eevee.png" alt="">
+          <img width="400" src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/393.png" alt="">
         </section>
         <section class="info">
             <h1 id="Name">Name: </h1>
@@ -35,7 +35,7 @@
       </div>
     </main>
     <footer>
-      <h1>I N F O</h1>
+      <h3>© O s k a r</h3>
     </footer>
   </body>
 </html>
